--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: Drupal Diversity
 email: drupaldiversity@drnikki.org
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Drupal Diversity is the landing page for the community-managed
+  diversity initiatives within the Drupal community.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: drupaldiversity
