--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Drupal Diversity
+title: Drupal Diversity & Inclusion
 email:
 description: > # this means to ignore newlines until "baseurl:"
-  Drupal Diversity is a collection of community-managed
+  Drupal Diversity & Inclusion is a collection of community-managed
   diversity initiatives within the Drupal community. We are all volunteers and are
   not affiliated with the Drupal Association.
 baseurl: "" # the subpath of your site, e.g. /blog
